# buddy

./: .gitignore  PRIVACY.md  README.md
backend/: pyproject.toml
backend/buddy/: cli.py  config.py  content_extract.py  llm_client.py  onboarding.py  server.py  supermemory_client.py  supermemory_installer.py
extension/: manifest.json
extension/background/: service-worker.js
extension/content/: comment-input.css  comment-input.js
extension/lib/: backend-client.js
extension/options/: options.html  options.js
extension/sidepanel/: sidepanel.css  sidepanel.html  sidepanel.js
